# qap-final-project

./: README.md  pyproject.toml  settings.py
pages/: auth_page.py  base.py  base_page.py  locators.py  reg_page.py
tests/: auth_page_expectations.py  conftest.py  reg_page_expectations.py  test_auth_page.py  test_reg_page.py
