[tool.poetry]
name = "qap-final-project"
version = "0.1.0"
description = "Skillfactory QAP final project"
authors = ["Mikhail Lyalin <mc.lyalin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-selenium = "^4.0.0"
termcolor = "^2.2.0"
webdriver-manager = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
